@@ -1,12 +1,12 @@
 package com.example.demo.services.implementation;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import com.example.demo.Entity.IngredientesEntity;
+import com.example.demo.Entity.Alergenos;
+import com.example.demo.Entity.IngredienteEntity;
 import com.example.demo.Model.IngredienteDTO;
 import com.example.demo.Repository.IngredienteRepository;
 import com.example.demo.services.IngredienteServicio;
@@ -18,42 +18,70 @@ public class IngredienteServicioImplementacion implements IngredienteServicio {
 
     @Override
     public List<IngredienteDTO> obtenerTodos() {
-        return ingredienteRepository.findAll().stream().map(i -> new IngredienteDTO(
-            i.getIdIngredientes().intValue(),
-            i.getNombre(),
-            i.getCantidad(),
-            i.getAlergenos() 
-        )).collect(Collectors.toList());
+        return ingredienteRepository.findAll()
+                .stream()
+                .map(this::convertirADTO)
+                .toList();
     }
 
     @Override
-    public IngredienteDTO guardarIngrediente(IngredienteDTO dto) {
-        IngredientesEntity i = new IngredientesEntity();
-        i.setNombre(dto.getNombre());
-        i.setCantidad(dto.getCantidad());
-        // i.setAlergenos(dto.getAlergenos()); // Revisa el tipo de dato de Alergenos en Entity
-        
-        IngredientesEntity guardado = ingredienteRepository.save(i);
-        dto.setIdIngrediente(guardado.getIdIngredientes().intValue());
+    public IngredienteDTO obtenerPorId(Long idIngrediente) {
+        IngredienteEntity ingrediente = ingredienteRepository.findById(idIngrediente)
+                .orElseThrow(() -> new RuntimeException("Ingrediente no encontrado"));
+
+        return convertirADTO(ingrediente);
+    }
+
+    @Override
+    public IngredienteDTO actualizarIngrediente(Long idIngrediente, IngredienteDTO dto) {
+
+        IngredienteEntity ingrediente = ingredienteRepository.findById(idIngrediente)
+                .orElseThrow(() -> new RuntimeException("Ingrediente no encontrado"));
+
+        ingrediente.setNombre(dto.getNombre());
+        ingrediente.setStock(dto.getStock());
+        ingrediente.setAlergeno(Alergenos.valueOf(dto.getAlergeno()));
+
+        ingredienteRepository.save(ingrediente);
+
+        return convertirADTO(ingrediente);
+    }
+
+    @Override
+    public void eliminarIngrediente(Long idIngrediente) {
+    	IngredienteEntity ingrediente = ingredienteRepository.findById(idIngrediente)
+    	        .orElseThrow(() -> new RuntimeException("Ingrediente no encontrado"));
+
+    	    if (!ingrediente.getIngredienteProductos().isEmpty()) {
+    	        throw new RuntimeException("No se puede eliminar el ingrediente porque está asociado a productos");
+    	    }
+
+    	    ingredienteRepository.delete(ingrediente);
+    }
+
+    
+    // Convertir de Entity a DTO
+    private IngredienteDTO convertirADTO(IngredienteEntity entity) {
+        IngredienteDTO dto = new IngredienteDTO();
+        dto.setIdIngrediente(entity.getIdIngredientes());
+        dto.setNombre(entity.getNombre());
+        dto.setStock(entity.getStock());
+        dto.setAlergeno(entity.getAlergeno().name());
         return dto;
     }
-
+    
     @Override
-    public IngredienteDTO actualizarStock(Long id, int cantidadExtra) {
-        IngredientesEntity i = ingredienteRepository.findById(id).orElse(null);
-        if(i != null) {
-            i.setCantidad(i.getCantidad() + cantidadExtra);
-            ingredienteRepository.save(i);
-            // Devolver DTO actualizado
-            return new IngredienteDTO(i.getIdIngredientes().intValue(), i.getNombre(), i.getCantidad(), null);
-        }
-        return null;
-    }
+    public IngredienteDTO crearIngrediente(IngredienteDTO dto) {
 
-    @Override
-    public void borrarIngrediente(Long id) {
-        if(ingredienteRepository.existsById(id)) {
-            ingredienteRepository.deleteById(id);
-        }
+        IngredienteEntity ingrediente = new IngredienteEntity();
+        ingrediente.setNombre(dto.getNombre());
+        ingrediente.setStock(dto.getStock());
+        ingrediente.setAlergeno(Alergenos.valueOf(dto.getAlergeno()));
+        
+        ingrediente.setAlergeno(Alergenos.valueOf(dto.getAlergeno()));
+
+        IngredienteEntity guardado = ingredienteRepository.save(ingrediente);
+
+        return convertirADTO(guardado);
     }
 }
